[package]
name = "ieee802_3_miim"
version = "0.6.0"
edition = "2021"
authors = ["Johannes Cornelis Draaijer <jcdra1@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A crate provides abstractions for the IEEE 802.3 Media Indepedent Interface, providing access to registers defined in the standard, and with optional implementations of this abstraction for commonly used PHYs"
homepage = "https://github.com/datdenkikniet/ieee802_3_miim"
keywords = ["ethernet"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"

[features]
default = [ "lan8720a", "lan8742a", "kzs8081r" ]

phy = [ ]
lan8720a = [ "phy", "mmd" ]
lan8742a = [ "phy", "mmd" ]
kzs8081r = [ "phy" ]
mmd = [ ]

[dependencies]
bitflags = "1.3"
defmt = { version = "0.3", optional = true }
