[package]
name = "ieee802_3_miim"
version = "0.9.1"
edition = "2021"
authors = ["Johannes Cornelis Draaijer <jcdra1@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A crate provides abstractions for the IEEE 802.3 Media Indepedent Interface, providing access to registers defined in the standard"
homepage = "https://github.com/datdenkikniet/ieee802_3_miim"
keywords = ["ethernet"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "../README.md"

[features]
default = [ "mmd" ]
defmt = [ "dep:defmt", "bilge-defmt" ]

mmd = [ ]

[dependencies]
bilge = "0.3.0"
defmt = { version = "1", optional = true }
bilge-defmt = { version = "0.2.0", optional = true }

[dev-dependencies]
nix = "0.31.2"

[[example]]
name = "phytool"
required-features = [ "mmd" ]