[package]
name = "ieee802_3_miim"
version = "0.9.1"
edition = "2021"
authors = ["Johannes Cornelis Draaijer <jcdra1@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A crate provides abstractions for the IEEE 802.3 Media Indepedent Interface, providing access to registers defined in the standard"
homepage = "https://github.com/datdenkikniet/ieee802_3_miim"
keywords = ["ethernet"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "../README.md"

[features]
defmt = [ "dep:defmt" ]

[dependencies]
defmt = { version = "1", optional = true }
bitbybit = "2.0.0"
arbitrary-int = "2.1.1"

[dev-dependencies]
nix = "0.31.2"
